--- a/interfaces/HighlightCardData.html
+++ b/interfaces/HighlightCardData.html
@@ -108,6 +108,12 @@
                                         </a>
                                 </li>
                                 <li>
+                                        <a href="#login" 
+>
+                                            login
+                                        </a>
+                                </li>
+                                <li>
                                         <a href="#reactions" 
 >
                                             reactions
@@ -117,12 +123,6 @@
                                         <a href="#repo" 
 >
                                             repo
-                                        </a>
-                                </li>
-                                <li>
-                                        <a href="#title" 
->
-                                            title
                                         </a>
                                 </li>
                                 <li>
@@ -284,6 +284,39 @@
                         <tbody>
                                 <tr>
                                     <td class="col-md-4">
+                                        <a name="login"></a>
+                                        <span class="name "><b>login</b>
+                                            <a href="#login">
+                                                <span class="icon ion-ios-link"></span>
+                                            </a>
+                                        </span>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="col-md-4">
+                                        <code>login:         <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+</code>
+                                    </td>
+                                </tr>
+
+
+                                    <tr>
+                                        <td class="col-md-4">
+                                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+
+                                        </td>
+                                    </tr>
+
+
+
+
+
+                        </tbody>
+                    </table>
+                    <table class="table table-sm table-bordered">
+                        <tbody>
+                                <tr>
+                                    <td class="col-md-4">
                                         <a name="reactions"></a>
                                         <span class="name "><b>reactions</b>
                                             <a href="#reactions">
@@ -336,39 +369,6 @@
                                     <tr>
                                         <td class="col-md-4">
                                             <i>Type : </i>    <code>Repository</code>
-
-                                        </td>
-                                    </tr>
-
-
-
-
-
-                        </tbody>
-                    </table>
-                    <table class="table table-sm table-bordered">
-                        <tbody>
-                                <tr>
-                                    <td class="col-md-4">
-                                        <a name="title"></a>
-                                        <span class="name "><b>title</b>
-                                            <a href="#title">
-                                                <span class="icon ion-ios-link"></span>
-                                            </a>
-                                        </span>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="col-md-4">
-                                        <code>title:         <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
-</code>
-                                    </td>
-                                </tr>
-
-
-                                    <tr>
-                                        <td class="col-md-4">
-                                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
 
                                         </td>
                                     </tr>
@@ -468,7 +468,7 @@ import { DbReaction } from &quot;../../github/entities/db-reaction.entity&quot;;
 import { RequiresUpdateMeta } from &quot;../user-card/user-card.service&quot;;
 
 interface HighlightCardData {
-  title: string;
+  login: string;
   body: string;
   reactions: number;
   avatarUrl: string;
@@ -495,7 +495,7 @@ export class HighlightCardService {
     const highlightReq &#x3D; await firstValueFrom(
       this.httpService.get&lt;DbUserHighlight&gt;(&#x60;https://api.opensauced.pizza/v1/user/highlights/${highlightId}&#x60;),
     );
-    const { login, title, highlight: body, updated_at, url } &#x3D; highlightReq.data;
+    const { login, updated_at, url, highlight: body } &#x3D; highlightReq.data;
 
     const reactionsReq &#x3D; await firstValueFrom(
       this.httpService.get&lt;DbReaction[]&gt;(&#x60;https://api.opensauced.pizza/v1/highlights/${highlightId}/reactions&#x60;),
@@ -517,8 +517,8 @@ export class HighlightCardService {
     }) as (Language &amp; { size: number })[];
 
     return {
-      title,
       body,
+      login,
       reactions,
       avatarUrl: &#x60;${String(user.avatarUrl)}&amp;size&#x3D;150&#x60;,
       langs: langList,
@@ -534,12 +534,12 @@ export class HighlightCardService {
     const { html } &#x3D; await import(&quot;satori-html&quot;);
     const satori &#x3D; (await import(&quot;satori&quot;)).default;
 
-    const { title, body, reactions, avatarUrl, repo, langs, langTotal } &#x3D; highlightData
+    const { reactions, body, avatarUrl, repo, langs, langTotal } &#x3D; highlightData
       ? highlightData
       : await this.getHighlightData(highlightId);
 
     const template &#x3D; html(
-      highlightCardTemplate(avatarUrl, title, body, userLangs(langs, langTotal), userProfileRepos([repo], 2), reactions),
+      highlightCardTemplate(avatarUrl, body, userLangs(langs, langTotal), userProfileRepos([repo], 2), reactions),
     );
 
     const interArrayBuffer &#x3D; await fs.readFile(&quot;node_modules/@fontsource/inter/files/inter-all-400-normal.woff&quot;);
