--- a/controllers/HighlightCardController.html
+++ b/controllers/HighlightCardController.html
@@ -137,8 +137,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="57"
-                            class="link-to-prism">src/social-card/highlight-card/highlight-card.controller.ts:57</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="51"
+                            class="link-to-prism">src/social-card/highlight-card/highlight-card.controller.ts:51</a></div>
                 </td>
             </tr>
 
@@ -221,7 +221,7 @@
                 <td class="col-md-4">
                     <b>Decorators : </b>
                     <br />
-                    <code>@Get(&#x27;/:id&#x27;)<br />@ApiOperation({operationId: &#x27;generateHighlightSocialCard&#x27;, summary: &#x27;Gets latest cache aware social card link for :id or generates a new one&#x27;})<br />@Header(&#x27;Content-Type&#x27;, &#x27;image/png&#x27;)<br />@ApiOkResponse({type: StreamableFile, description: &#x27;Social card image&#x27;})<br />@ApiNotFoundResponse({description: &#x27;Highlight not found&#x27;})<br />@ApiForbiddenResponse({description: &#x27;Rate limit exceeded&#x27;})<br />@ApiBadRequestResponse({description: &#x27;Invalid highlight id&#x27;})<br />@Redirect()<br /></code>
+                    <code>@Get(&#x27;/:id&#x27;)<br />@ApiOperation({operationId: &#x27;generateHighlightSocialCard&#x27;, summary: &#x27;Generates the social card image for the provided highlight ID&#x27;})<br />@Header(&#x27;Content-Type&#x27;, &#x27;image/png&#x27;)<br />@ApiOkResponse({type: StreamableFile, description: &#x27;Social card image&#x27;})<br />@ApiNotFoundResponse({description: &#x27;Highlight not found&#x27;})<br />@ApiForbiddenResponse({description: &#x27;Rate limit exceeded&#x27;})<br />@ApiBadRequestResponse({description: &#x27;Invalid highlight id&#x27;})<br />@Redirect()<br /></code>
                 </td>
             </tr>
 
@@ -316,7 +316,7 @@ export class HighlightCardController {
   @Get(&quot;/:id&quot;)
   @ApiOperation({
     operationId: &quot;generateHighlightSocialCard&quot;,
-    summary: &quot;Gets latest cache aware social card link for :id or generates a new one&quot;,
+    summary: &quot;Generates the social card image for the provided highlight ID&quot;,
   })
   @Header(&quot;Content-Type&quot;, &quot;image/png&quot;)
   @ApiOkResponse({ type: StreamableFile, description: &quot;Social card image&quot; })
@@ -328,15 +328,9 @@ export class HighlightCardController {
     @Param(&quot;id&quot;, ParseIntPipe) id: number,
       @Res({ passthrough: true }) res: FastifyReply,
   ): Promise&lt;void&gt; {
-    const { fileUrl, hasFile, needsUpdate } &#x3D; await this.highlightCardService.checkRequiresUpdate(id);
+    const png &#x3D; await this.highlightCardService.getHighlightCard(id);
 
-    if (hasFile &amp;&amp; !needsUpdate) {
-      return res.status(HttpStatus.FOUND).redirect(fileUrl);
-    }
-
-    const url &#x3D; await this.highlightCardService.getHighlightCard(id);
-
-    return res.status(HttpStatus.FOUND).redirect(url);
+    return res.status(HttpStatus.OK).send(png);
   }
 
   @Get(&quot;/:id/metadata&quot;)
